# 100-days-of-AI-Projects

./: README.md
.devcontainer/: devcontainer.json
ai-job-finder/: .env.example  ai.py  app.py  candidate_profile.py  cv_experience.py  github_profile.py  job_fetcher.py  matching.py  requirements.txt
ai-job-finder/.streamlit/: config.toml
daraz-product-finder/: .gitignore  analysis.py  app.py  cleanup_agent.py  daraz_reviews_dataset.json  insight_agent.py  main_scraper.py  probe_1_listing.py  probe_4_taxonomy.py  probe_sort_topsales.py
daraz-product-recommender/: daraz_reviews_dataset.json  main_scraper.py  probe_2_listing.py  probe_3_reviews.py  raw_listing_sample.json
obsidian-second-brain/: .env.example  .gitignore  README.md  docker-compose.yml  memory-graph-phase1-recap.html  pyproject.toml
obsidian-second-brain/memory-graph-plugin/: contradictions.ts  esbuild.config.mjs  extract.ts  graph.ts  ingest.ts  main.ts  manifest.json  mergeModal.ts  ollama.ts  package-lock.json  package.json  resolve.ts  settings.ts  styles.css  tsconfig.json  vault.ts  vaultSync.ts  view.ts
obsidian-second-brain/src/memory_graph/: cli.py  config.py  extract.py  graph.py  ingest.py  llm.py
obsidian-second-brain/tests/: test_extract.py  test_graph.py
rbac-rag-chatbot/: Dockerfile  README.md  requirements.txt  streamlit_app.py
viral-idea-generator/: README.md  app.py  idea_generator.py  reddit_api.py  requirements.txt  test_reddit.py
viral-ig-idea-generator/: README.md  app.py  idea_generator.py  sociavault_api.py
voice-to-jira/: .gitignore  README.md  index.html
youtube-learning-agent/: .gitignore  README.md  main.py  prototype.py  pyproject.toml  requirements.txt
(+21 files in other folders)
