[project]
name = "youtube-learning-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=2.9.0",
    "ipykernel>=7.3.0",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
